--- a/CSS/style.css
+++ b/CSS/style.css
@@ -20,15 +20,22 @@ main{
 }
 
 h1{
-    color:brown;
+    color:rgb(179, 78, 138);
     font-family: 'Fredoka One', cursive;
     margin:30px 0;
+}
+
+.personale{
+    width:100%;
+    margin-top: 5%;
 }
 
 .badge{
     background: #000;
     margin:20px 2.5%;
-    height:80px;
+    height:90px;
+    /* line-height: 90%;
+    vertical-align: middle; */
     width: calc(85%/3);
     text-align: left;
     float: left;
@@ -43,13 +50,6 @@ img{
     margin-right: 15px;
 }
 
-.dati{
-    margin:0;
-    height:80px;
-    background-color: blueviolet;
-    line-height: 80%;
-    vertical-align: middle;
-}
 
 
 .nome{
@@ -66,7 +66,7 @@ img{
 }
 
 a{
-    font-size: 12px;
+    font-size: 70%;
     text-decoration: none;
     color: aqua;
 }
