--- a/CSS/style.css
+++ b/CSS/style.css
@@ -46,12 +46,16 @@ h1{
 
 }
 
+.clearfix{
+
+}
+
 img{
     height:100%;
     float: left;
     /* questo float sposta l'immagine dentro al badge.
     serve per poter scrivere in alto il nome. */
-    margin-right: 15px;
+    margin-right: 15p  x;
 }
 
 
